Web Locks API: Ensure shared/exclusive sets are rebuilt after a release

The code contained an optimization to skip rebuilding sets of held
shared/granted locks if there was no pending request. This was not
valid, since a request could come in later and rely on the sets to
correctly determine if the lock was grantable.

Bug: 840994
Change-Id: I64218cfaebe4ff7b46f133665a94378c66d0e738
Reviewed-on: https://chromium-review.googlesource.com/1050807
Reviewed-by: Victor Costan <pwnall@chromium.org>
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557257}